Copyright (c) 2003-2005 Infrae. All rights reserved.
See also LICENSE.txt

SilvaExternalSources changes

  0.10.2:

    Bugs fixed:

      - Fixed typo in add_submit script for CSVSource.

      - Fixed issue1257, context problems in Kupu, Kupu code now uses the same code
        to find code sources as the rest of Silva.

  0.10.1

    Bugs fixed:

     o Fixed missing import for Silva.i18n.translate

  0.10

    Features added:

     o i18n, German translation.

    Bugs fixed:

     o The layout pagetemplate for rendering the SQL result set now
       gets more information about the columns names and their
       order. The pagetemplates of existing SQL Source instances need
       to be updated to make use of this information.

  0.9.1

    Features added:

     o Silva 1.1 compatibility.

    Bugs fixed:

     o Added support for default values in the Kupu editor tool.

  0.9

    Features added:

      o XML exporter for external source-based data in
        documents. Needed to support Silva's XSLT rendering.

  0.8

    Bugs fixed:

      o Configure the correct "add" permissions (esp. for
        CSV Sources)

  0.8b1

    Features added:
     
      o Kupu support.

    Bugs fixed:

      o The description could not be set empty. It can now.

      o The ZMI screens for the ExternalSource objects are now set
        to be in utf-8. This way we can make save assumption for
        decoding the user input into unicode.

  0.7

    Lots of additions and bugfixes, including new CVSSource object.
 
  0.2 
 
    Initial public release.