@@ -30,10 +30,10 @@
     tal:attributes="class string:silvatable ${table_class}"
     >
     <caption 
-      tal:condition="parameters/show_caption | string:true"
+      tal:condition="python:parameters.has_key('show_caption') and parameters['show_caption'] == 'True'"
       tal:content="here/title"
     />
-    <thead tal:condition="parameters/show_column_heading | string:true">
+    <thead tal:condition="python:parameters.has_key('show_column_heading') and parameters['show_column_heading'] == 'True'">
       <tr>
         <tal:block repeat="name columnnames">
           <th tal:content="name" />
